# lscmf

./: .gitignore  404.html  README.ipynb  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
docs/: index.md
getting-started/: getting-started.ipynb  index.html
internals/: index.html
javascripts/: extra.js
lscmf/: __version__.py  lscmf.py  matching.py  simulate.py
reference/: index.html
search/: search_index.json
src/lscmf/: __about__.py  __init__.py
